plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.2'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com._1000meal'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Spring Web - REST API 개발용
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // Spring Data JPA - ORM 기반 DB 연동
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    // MySQL Driver - MySQL 데이터베이스 연동
    runtimeOnly 'com.mysql:mysql-connector-j'

    // Spring Security - 인증 및 인가 보안 처리
    implementation 'org.springframework.boot:spring-boot-starter-security'

    // Lombok - 코드 간결화를 위한 애너테이션 (Getter, Builder 등)
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'

    // Spring Validation - @Valid 등의 유효성 검사
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // Test 의존성 (JUnit, Mockito 등)
    testImplementation 'org.springframework.boot:spring-boot-starter-test'



    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5' // json 처리용



    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    // JWT 사용 시
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    //Swagger 관련
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'

    //이메일 관련
    implementation 'org.springframework.boot:spring-boot-starter-mail'
}

test {
    useJUnitPlatform()
}